Formato de grid en guias

--- a/pages/Media.html
+++ b/pages/Media.html
@@ -27,15 +27,15 @@
             <!--Esta division esta estructurada de esta manera porque estuve siguiendo un tutorial de como lograr un cuadro que cambie cuando toco la pestaña. Los elementos "Fotos, Videos y Relatos" serian los titulos de cada pestaña. Hasta ahora lo dejé asi a modo de Place Holder, porque para completarlo necesito funciones de javascript y no me quise adelantar.-->
             <div class="contenedor">
                 <ul class="BotonesGuia">
-                     <li class="BotonGuia">Fotos</li>
+                     <li class="BotonGuiaActivo">Fotos</li>
                      <li class="BotonGuia">Videos</li>
-                     <li class="BotonGuiaActivo">Relatos</li>
+                     <li class="BotonGuia">Relatos</li>
                 </ul>
 
             <div class="subcontenedor">
-                <div class="bloque">Place Holder bloque Fotos</div>
+                <div class="bloqueActivo">Place Holder bloque Fotos</div>
                 <div class="bloque">Place Holder bloque Videos</div>
-                <div class="bloqueActivo">Place Holder bloque Relatos</div>
+                <div class="bloque">Place Holder bloque Relatos</div>
             </div>
 
             </div>
