--- a/pages/Guias.html
+++ b/pages/Guias.html
@@ -23,8 +23,19 @@
     </header>
 
     <main>
-        <section class="PlaceHolder">
-            <p>Place Holder</p>
+        <section class="ListaGuias">
+                <div class="ImagenGuia"> . </div>
+                <div class="ItemGuia"> Guia Numero 1 </div>
+                <div class="ImagenGuia"> . </div>
+                <div class="ItemGuia"> Guia Numero 2 </div>
+                <div class="ImagenGuia"> . </div>
+                <div class="ItemGuia"> Guia Numero 3 </div>
+                <div class="ImagenGuia"> . </div>
+                <div class="ItemGuia"> Guia Numero 4 </div>
+                <div class="ImagenGuia"> . </div>
+                <div class="ItemGuia"> Guia Numero 5 </div>
+                <div class="ImagenGuia"> . </div>
+                <div class="ItemGuia"> Guia Numero 6 </div>
         </section>
     </main>
     <footer>
