--- a/pages/Guias.html
+++ b/pages/Guias.html
@@ -24,18 +24,24 @@
 
     <main>
         <section class="ListaGuias">
-                <div class="ImagenGuia"> . </div>
+                <div class="ImagenGuia">  </div>
                 <div class="ItemGuia"> Guia Numero 1 </div>
-                <div class="ImagenGuia"> . </div>
+                <div class="GuiaAutor">Autor Guia 1</div>
+                <div class="ImagenGuia">  </div>
                 <div class="ItemGuia"> Guia Numero 2 </div>
-                <div class="ImagenGuia"> . </div>
+                <div class="GuiaAutor">Autor Guia 2</div>
+                <div class="ImagenGuia">  </div>
                 <div class="ItemGuia"> Guia Numero 3 </div>
-                <div class="ImagenGuia"> . </div>
+                <div class="GuiaAutor">Autor Guia 3</div>
+                <div class="ImagenGuia">  </div>
                 <div class="ItemGuia"> Guia Numero 4 </div>
-                <div class="ImagenGuia"> . </div>
+                <div class="GuiaAutor">Autor Guia 4</div>
+                <div class="ImagenGuia">  </div>
                 <div class="ItemGuia"> Guia Numero 5 </div>
-                <div class="ImagenGuia"> . </div>
+                <div class="GuiaAutor">Autor Guia 5</div>
+                <div class="ImagenGuia">  </div>
                 <div class="ItemGuia"> Guia Numero 6 </div>
+                <div class="GuiaAutor">Autor Guia 6</div>
         </section>
     </main>
     <footer>
