Agregado boostrap, iconos, y correcciones visuales a todas las paginas

--- a/pages/Foro.html
+++ b/pages/Foro.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>El Embate Obsidiana</title>
 </head>
@@ -10,15 +12,12 @@
 <body background="../img/Background - Foro.jpg">
     <header>
         <h1>El Embate Obsidiana</h1>
-        <nav>
-
-        </nav>
-        <ul class="header">
-            <li class="BotonesHeader"><a href="../index.html">Quienes Somos</a></li>
-            <li class="BotonesHeader"><a href="./Media.html">Media</a></li>
-            <li class="BotonesHeader"><a href="./Guias.html">Guias</a></li>
-            <li class="BotonesHeader"><a href="./Foro.html">Foro</a></li>
-            <li class="BotonesHeader"><a href="./Portal.html">Portal de Informacion</a></li>
+            <ul class="header">
+            <li class="BotonesHeader"><i class="bi bi-person"></i><a href="../index.html">Quienes Somos</a></li>
+            <li class="BotonesHeader"><i class="bi bi-image-fill"></i><a href="./Media.html">Media</a></li>
+            <li class="BotonesHeader"><i class="bi bi-compass"></i><a href="./Guias.html">Guias</a></li>
+            <li class="BotonesHeader"><i class="bi bi-chat-right"></i><a href="./Foro.html">Foro</a></li>
+            <li class="BotonesHeader"><i class="bi bi-door-open"></i><a href="./Portal.html">Portal de Informacion</a></li>
         </ul>
     </header>
 
@@ -34,6 +33,7 @@
         <br>
         Todas las marcas aquí mencionadas son propiedad de sus respectivos dueños.
     </p>
-</footer>
+    </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script> 
 </body>
 </html>
