--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>El Embate Obsidiana</title>
 </head>
@@ -10,13 +12,12 @@
 <body background="./img/Background - Index.jpg">
     <header>
         <h1>El Embate Obsidiana</h1>
-        <nav></nav>
         <ul class="header">
-            <li class="BotonesHeader"><a href="./index.html">Quienes Somos</a></li>
-            <li class="BotonesHeader"><a href="./pages/Media.html">Media</a></li>
-            <li class="BotonesHeader"><a href="./pages/Guias.html">Guias</a></li>
-            <li class="BotonesHeader"><a href="./pages/Foro.html">Foro</a></li>
-            <li class="BotonesHeader"><a href="./pages/Portal.html">Portal de Informacion</a></li>
+            <li class="BotonesHeader"><i class="bi bi-person"></i><a href="./index.html">Quienes Somos</a></li>
+            <li class="BotonesHeader"><i class="bi bi-image-fill"></i><a href="./pages/Media.html">Media</a></li>
+            <li class="BotonesHeader"><i class="bi bi-compass"></i><a href="./pages/Guias.html">Guias</a></li>
+            <li class="BotonesHeader"><i class="bi bi-chat-right"></i><a href="./pages/Foro.html">Foro</a></li>
+            <li class="BotonesHeader"><i class="bi bi-door-open"></i><a href="./pages/Portal.html">Portal de Informacion</a></li>
         </ul>
     </header>
 
@@ -31,10 +32,10 @@
         <section class="LinkSection">
             <p>Encuentranos en:</p>
              <ul>
-                <li class="LinkList"><a href="https://discord.gg/CtFYu45ZWF" target="_blank"> Discord </a></li>
-                <li class="LinkList"><a href="https://www.facebook.com/groups/220619288298128" target="_blank"> Facebook </a></li>
-                <li class="LinkList"><a href="https://www.youtube.com/@ElEmbateObsidiana" target="_blank"> Youtube </a></li>
-                <li class="LinkList"><a href="https://www.warcraftlogs.com/guild/us/quelthalas/el%20embate%20obsidiana" target="_blank"> WarcraftLogs </a></li>
+                <li class="LinkList"><i class="bi bi-discord"></i><a href="https://discord.gg/CtFYu45ZWF" target="_blank"> &nbsp;Discord&nbsp; </a><i class="bi bi-discord"></i></li>
+                <li class="LinkList"><i class="bi bi-facebook"></i><a href="https://www.facebook.com/groups/220619288298128" target="_blank"> &nbsp;Facebook&nbsp; </a><i class="bi bi-facebook"></i></li>
+                <li class="LinkList"><i class="bi bi-youtube"></i><a href="https://www.youtube.com/@ElEmbateObsidiana" target="_blank"> &nbsp;Youtube&nbsp; </a><i class="bi bi-youtube"></i></li>
+                <li class="LinkList"><i class="bi bi-shield"></i><a href="https://www.warcraftlogs.com/guild/us/quelthalas/el%20embate%20obsidiana" target="_blank"> &nbsp;WarcraftLogs&nbsp; </a><i class="bi bi-shield"></i></li>
              </ul>
         </section>
       
@@ -45,5 +46,6 @@
            Todas las marcas aquí mencionadas son propiedad de sus respectivos dueños.
        </p>
     </footer>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
