--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    
+    <div class="TituloPrincipal">
+    <img class="Logo" src="./img/Logo Embate sin fondo.png" width="75" height="90">
     <title>El Embate Obsidiana</title>
+    </div>
 </head>
 
 <body background="./img/Background - Index.jpg">
     <header>
         <h1>El Embate Obsidiana</h1>
         <ul class="header">
-            <li class="BotonesHeader"><i class="bi bi-person"></i><a href="./index.html">Quienes Somos</a></li>
-            <li class="BotonesHeader"><i class="bi bi-image-fill"></i><a href="./pages/Media.html">Media</a></li>
-            <li class="BotonesHeader"><i class="bi bi-compass"></i><a href="./pages/Guias.html">Guias</a></li>
-            <li class="BotonesHeader"><i class="bi bi-chat-right"></i><a href="./pages/Foro.html">Foro</a></li>
-            <li class="BotonesHeader"><i class="bi bi-door-open"></i><a href="./pages/Portal.html">Portal de Informacion</a></li>
+            <li class="BotonesHeader"><i class="bi bi-person"></i><a href="./index.html">&nbsp;Quienes Somos</a></li>
+            <li class="BotonesHeader"><i class="bi bi-image-fill"></i><a href="./pages/Media.html">&nbsp;Media</a></li>
+            <li class="BotonesHeader"><i class="bi bi-compass"></i><a href="./pages/Guias.html">&nbsp;Guias</a></li>
+            <li class="BotonesHeader"><i class="bi bi-chat-right"></i><a href="./pages/Foro.html">&nbsp;Foro</a></li>
+            <li class="BotonesHeader"><i class="bi bi-door-open"></i><a href="./pages/Portal.html">&nbsp;Portal de Informacion</a></li>
         </ul>
     </header>
 
