Terminada pagina Guias

--- a/pages/Guias.html
+++ b/pages/Guias.html
@@ -27,24 +27,51 @@
 
     <main>
         <section class="ListaGuias">
-                <div class="ImagenGuia">  </div>
-                <div class="ItemGuia"> Guia Numero 1 </div>
-                <div class="GuiaAutor">Autor Guia 1</div>
-                <div class="ImagenGuia">  </div>
-                <div class="ItemGuia"> Guia Numero 2 </div>
-                <div class="GuiaAutor">Autor Guia 2</div>
-                <div class="ImagenGuia">  </div>
-                <div class="ItemGuia"> Guia Numero 3 </div>
-                <div class="GuiaAutor">Autor Guia 3</div>
-                <div class="ImagenGuia">  </div>
-                <div class="ItemGuia"> Guia Numero 4 </div>
-                <div class="GuiaAutor">Autor Guia 4</div>
-                <div class="ImagenGuia">  </div>
-                <div class="ItemGuia"> Guia Numero 5 </div>
-                <div class="GuiaAutor">Autor Guia 5</div>
-                <div class="ImagenGuia">  </div>
-                <div class="ItemGuia"> Guia Numero 6 </div>
-                <div class="GuiaAutor">Autor Guia 6</div>
+                <div class="ImagenGuia"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
+                <div class="ItemGuia"> <ul>
+                     <li class="GuideTitle"><i>Liberation of Undermine - Raid Overview </i><br></li>
+                     <li class="GuideLink"><a href="https://www.wowhead.com/guide/raids/liberation-of-undermine/overview" target="_blank">Wowhead Full Guide</a> </li>
+                     <li class="GuideLink"><a href="https://www.youtube.com/watch?v=SR_zotDj4rY&list=PLhx6nABtx9XNfs9x66l_H5SncBzg1Fa-f" target="_blank">Youtube PlayList by Ready Check Pull</a></li>
+                     <li class="GuideImg"><img src="../img/Flayer_Undermine.png"  height="150"></li>
+                </div>
+                <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
+
+                <div class="ImagenGuia"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
+                <div class="ItemGuia"> <ul>
+                     <li class="GuideTitle"><i>The War Within Season 2 - Overview </i><br></li>
+                     <li class="GuideLink"><a href="https://www.wowhead.com/guide/the-war-within/season-2-overview" target="_blank">Wowhead Full Guide</a> </li>
+                     <li class="GuideLink"><a href="" target="_blank"></a></li>
+                     <li class="GuideImg"><img src="../img/Flyer-TheWarWithin.png"  height="150"></li>
+                </div>
+                <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
+
+                <div class="ImagenGuia"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
+                <div class="ItemGuia"> <ul>
+                     <li class="GuideTitle"><i>The War Within Season 2 - Brewmaster Guide </i><br></li>
+                     <li class="GuideLink"><a href="https://www.wowhead.com/guide/classes/monk/brewmaster/overview-pve-tank" target="_blank">Wowhead Full Guide</a> </li>
+                     <li class="GuideLink"><a href="" target="_blank"></a></li>
+                     <li class="GuideImg"><img src="../img/Flyer-Brewmaster.png"  height="150"></li>
+                </div>
+                <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
+
+                 <div class="ImagenGuia"><img src="../img/ProfilePic-Celduin.png" alt="Profile Pic" width="146" height="146">  </div>
+                <div class="ItemGuia"> <ul>
+                     <li class="GuideTitle"><i>The War Within Season 2 - Arms Warrior Guide </i><br></li>
+                     <li class="GuideLink"><a href="https://www.wowhead.com/guide/classes/warrior/arms/overview-pve-dps" target="_blank">Wowhead Full Guide</a> </li>
+                     <li class="GuideLink"><a href="" target="_blank"></a></li>
+                     <li class="GuideImg"><img src="../img/Flyer-ArmsWarrior.png"  height="150"></li>
+                </div>
+                <div class="GuiaAutor">by Celduin <br> 22/06/2025 </div>
+
+                  <div class="ImagenGuia"><img src="../img/ProfilePic-Celduin.png" alt="Profile Pic" width="146" height="146">  </div>
+                <div class="ItemGuia"> <ul>
+                     <li class="GuideTitle"><i>The War Within Season 2 - PvP Guide </i><br></li>
+                     <li class="GuideLink"><a href="https://www.icy-veins.com/wow/the-war-within-pvp-season-2-guide" target="_blank">IcyVeins Full Guide</a> </li>
+                     <li class="GuideLink"><a href="" target="_blank"></a></li>
+                     <li class="GuideImg"><img src="../img/Flyer-PvPGuide.png"  height="150"></li>
+                </div>
+                <div class="GuiaAutor">by Celduin <br> 22/06/2025 </div>
+
         </section>
     </main>
     <footer>
