--- a/pages/Media.html
+++ b/pages/Media.html
@@ -27,21 +27,19 @@
 
     <main>
         <section class="MediaContainer">
-            <!--Esta division esta estructurada de esta manera porque estuve siguiendo un tutorial de como lograr un cuadro que cambie cuando toco la pestaña. Los elementos "Fotos, Videos y Relatos" serian los titulos de cada pestaña. Hasta ahora lo dejé asi a modo de Place Holder, porque para completarlo necesito funciones de javascript y no me quise adelantar.-->
-            <div class="contenedor">
-                <ul class="BotonesGuia">
-                     <li class="BotonGuiaActivo">Fotos</li>
-                     <li class="BotonGuia">Videos</li>
-                     <li class="BotonGuia">Relatos</li>
-                </ul>
-
-            <div class="subcontenedor">
-                <div class="bloqueActivo">Place Holder bloque Fotos</div>
-                <div class="bloque">Place Holder bloque Videos</div>
-                <div class="bloque">Place Holder bloque Relatos</div>
-            </div>
-
-            </div>
+            <img src="../img/Media/20250516 - AotC Gallywix Parade (9).jpg" alt="AotC Gallywix Parade (9)" width="50%">
+            <img src="../img/Media/20250516 - AotC Gallywix Parade (3).jpg" alt=""  width="50%">
+            <img src="../img/Media/20250516 - AotC Gallywix Parade (1).jpg" alt="" width="50%">
+            <img src="../img/Media/20250514 - Gallywix Kill (1).jpg" alt="" width="50%">
+            <img src="../img/Media/20250319 - Undermine.jpg" alt="" width="50%">
+            <img src="../img/Media/20241006 - Karyon Pic.jpg" alt="" width="50%">
+            <img src="../img/Media/20240724 - First Warband!.jpeg" alt="" width="50%">
+            <img src="../img/Media/20240208 - AotC Fyrakk (1).jpg" alt="" width="50%">
+            <img src="../img/Media/20230912 - Azeroth from Genedar (2).jpg" alt="" width="50%">
+            <img src="../img/Media/Landscape (4).jpg" alt="" width="50%">
+            <img src="../img/Media/Karyon.jpg" alt="" width="50%">
+            <img src="../img/Media/Embate Flag (1).jpg" alt="" width="50%">
+         
         </section>
     </main>
     <footer>
