Cambiado Foro por Relatos, terminado Relatos, terminado Portal

--- a/pages/Guias.html
+++ b/pages/Guias.html
@@ -20,14 +20,14 @@
             <li class="BotonesHeader"><i class="bi bi-person"></i><a href="../index.html">&nbsp;Quienes Somos</a></li>
             <li class="BotonesHeader"><i class="bi bi-image-fill"></i><a href="./Media.html">&nbsp;Media</a></li>
             <li class="BotonesHeader"><i class="bi bi-compass"></i><a href="./Guias.html">&nbsp;Guias</a></li>
-            <li class="BotonesHeader"><i class="bi bi-chat-right"></i><a href="./Foro.html">&nbsp;Foro</a></li>
+            <li class="BotonesHeader"><i class="bi bi-chat-right"></i><a href="./Relatos.html">&nbsp;Relatos</a></li>
             <li class="BotonesHeader"><i class="bi bi-door-open"></i><a href="./Portal.html">&nbsp;Portal de Informacion</a></li>
         </ul>
     </header>
 
     <main>
         <section class="ListaGuias">
-                <div class="ImagenGuia"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
+                <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
                 <div class="ItemGuia"> <ul>
                      <li class="GuideTitle"><i>Liberation of Undermine - Raid Overview </i><br></li>
                      <li class="GuideLink"><a href="https://www.wowhead.com/guide/raids/liberation-of-undermine/overview" target="_blank">Wowhead Full Guide</a> </li>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
 
-                <div class="ImagenGuia"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
+                <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
                 <div class="ItemGuia"> <ul>
                      <li class="GuideTitle"><i>The War Within Season 2 - Overview </i><br></li>
                      <li class="GuideLink"><a href="https://www.wowhead.com/guide/the-war-within/season-2-overview" target="_blank">Wowhead Full Guide</a> </li>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
 
-                <div class="ImagenGuia"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
+                <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
                 <div class="ItemGuia"> <ul>
                      <li class="GuideTitle"><i>The War Within Season 2 - Brewmaster Guide </i><br></li>
                      <li class="GuideLink"><a href="https://www.wowhead.com/guide/classes/monk/brewmaster/overview-pve-tank" target="_blank">Wowhead Full Guide</a> </li>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
 
-                 <div class="ImagenGuia"><img src="../img/ProfilePic-Celduin.png" alt="Profile Pic" width="146" height="146">  </div>
+                 <div class="ProfilePic"><img src="../img/ProfilePic-Celduin.png" alt="Profile Pic" width="146" height="146">  </div>
                 <div class="ItemGuia"> <ul>
                      <li class="GuideTitle"><i>The War Within Season 2 - Arms Warrior Guide </i><br></li>
                      <li class="GuideLink"><a href="https://www.wowhead.com/guide/classes/warrior/arms/overview-pve-dps" target="_blank">Wowhead Full Guide</a> </li>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="GuiaAutor">by Celduin <br> 22/06/2025 </div>
 
-                  <div class="ImagenGuia"><img src="../img/ProfilePic-Celduin.png" alt="Profile Pic" width="146" height="146">  </div>
+                  <div class="ProfilePic"><img src="../img/ProfilePic-Celduin.png" alt="Profile Pic" width="146" height="146">  </div>
                 <div class="ItemGuia"> <ul>
                      <li class="GuideTitle"><i>The War Within Season 2 - PvP Guide </i><br></li>
                      <li class="GuideLink"><a href="https://www.icy-veins.com/wow/the-war-within-pvp-season-2-guide" target="_blank">IcyVeins Full Guide</a> </li>
