--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li class="BotonesHeader"><i class="bi bi-person"></i><a href="./index.html">&nbsp;Quienes Somos</a></li>
             <li class="BotonesHeader"><i class="bi bi-image-fill"></i><a href="./pages/Media.html">&nbsp;Media</a></li>
             <li class="BotonesHeader"><i class="bi bi-compass"></i><a href="./pages/Guias.html">&nbsp;Guias</a></li>
-            <li class="BotonesHeader"><i class="bi bi-chat-right"></i><a href="./pages/Foro.html">&nbsp;Foro</a></li>
+            <li class="BotonesHeader"><i class="bi bi-chat-right"></i><a href="./pages/Relatos.html">&nbsp;Relatos</a></li>
             <li class="BotonesHeader"><i class="bi bi-door-open"></i><a href="./pages/Portal.html">&nbsp;Portal de Informacion</a></li>
         </ul>
     </header>
