--- a/pages/Portal.html
+++ b/pages/Portal.html
@@ -20,14 +20,18 @@
             <li class="BotonesHeader"><i class="bi bi-person"></i><a href="../index.html">&nbsp;Quienes Somos</a></li>
             <li class="BotonesHeader"><i class="bi bi-image-fill"></i><a href="./Media.html">&nbsp;Media</a></li>
             <li class="BotonesHeader"><i class="bi bi-compass"></i><a href="./Guias.html">&nbsp;Guias</a></li>
-            <li class="BotonesHeader"><i class="bi bi-chat-right"></i><a href="./Foro.html">&nbsp;Foro</a></li>
+            <li class="BotonesHeader"><i class="bi bi-chat-right"></i><a href="./Relatos.html">&nbsp;Relatos</a></li>
             <li class="BotonesHeader"><i class="bi bi-door-open"></i><a href="./Portal.html">&nbsp;Portal de Informacion</a></li>
         </ul>
     </header>
 
     <main>
-        <section class="PlaceHolder">
-            <p>Place Holder</p>
+        <section class="ContentSection">
+            <h2> - Guild Raid Roster for The War Within -</h2>
+            <iframe class="RaidRosterTWW"
+               title="ExcelRaidTWW" width="100%" height="500px"
+               src="https://docs.google.com/spreadsheets/d/1Kul3j6zk5_3zwemcMKl95QcUA3vXu0e8dIIbk0qDQFY/edit?usp=sharing"
+            ></iframe>
         </section>
         
     </main>
