--- a/pages/Portal.html
+++ b/pages/Portal.html
@@ -6,6 +6,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../css/style.css">
+
+    <link rel="icon" type="image/png" sizes="16x16"  href="../img/favicons/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
     
     <div class="TituloPrincipal">
     <img class="Logo" src="../img/Logo Embate sin fondo.png" width="75" height="90">
@@ -20,7 +24,7 @@
             <li class="BotonesHeader"><i class="bi bi-person"></i><a href="../index.html">&nbsp;Quienes Somos</a></li>
             <li class="BotonesHeader"><i class="bi bi-image-fill"></i><a href="./Media.html">&nbsp;Media</a></li>
             <li class="BotonesHeader"><i class="bi bi-compass"></i><a href="./Guias.html">&nbsp;Guias</a></li>
-            <li class="BotonesHeader"><i class="bi bi-chat-right"></i><a href="./Relatos.html">&nbsp;Relatos</a></li>
+            <li class="BotonesHeader"><i class="bi bi-pencil"></i><a href="./Relatos.html">&nbsp;Relatos</a></li>
             <li class="BotonesHeader"><i class="bi bi-door-open"></i><a href="./Portal.html">&nbsp;Portal de Informacion</a></li>
         </ul>
     </header>
