--- a/pages/Relatos.html
+++ b/pages/Relatos.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../css/style.css">
 
+    <link rel="icon" type="image/png" sizes="16x16"  href="../img/favicons/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+
     <div class="TituloPrincipal">
     <img class="Logo" src="../img/Logo Embate sin fondo.png" width="75" height="90">
     <title>El Embate Obsidiana</title>
@@ -20,7 +24,7 @@
             <li class="BotonesHeader"><i class="bi bi-person"></i><a href="../index.html">&nbsp;Quienes Somos</a></li>
             <li class="BotonesHeader"><i class="bi bi-image-fill"></i><a href="./Media.html">&nbsp;Media</a></li>
             <li class="BotonesHeader"><i class="bi bi-compass"></i><a href="./Guias.html">&nbsp;Guias</a></li>
-            <li class="BotonesHeader"><i class="bi bi-chat-right"></i><a href="./Relatos.html">&nbsp;Relatos</a></li>
+            <li class="BotonesHeader"><i class="bi bi-pencil"></i></i><a href="./Relatos.html">&nbsp;Relatos</a></li>
             <li class="BotonesHeader"><i class="bi bi-door-open"></i><a href="./Portal.html">&nbsp;Portal de Informacion</a></li>
         </ul>
     </header>
