--- a/pages/Relatos.html
+++ b/pages/Relatos.html
@@ -64,7 +64,7 @@
          
         </section>
     </main>
-    <footer>
+    <footer class="footerlong">
     <p>
         Creado por Burgos Claudio
         <br>
