--- a/pages/Guias.html
+++ b/pages/Guias.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 
     <link rel="icon" type="image/png" sizes="16x16"  href="../img/favicons/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#ffffff">
@@ -17,7 +17,7 @@
     </div>
 </head>
 
-<body background="../img/Background - Guias.jpg">
+<body>
     <header>
             <h1>El Embate Obsidiana</h1>
             <ul class="header">
@@ -29,11 +29,11 @@
         </ul>
     </header>
 
-    <main>
+    <main class="Guias">
         <section class="ListaGuias">
                 <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
                 <div class="ItemGuia"> <ul>
-                     <li class="GuideTitle"><i>Liberation of Undermine - Raid Overview </i><br></li>
+                     <li class="GuideTitle"><i>Liberation of Undermine - Raid Overview </i></li>
                      <li class="GuideLink"><a href="https://www.wowhead.com/guide/raids/liberation-of-undermine/overview" target="_blank">Wowhead Full Guide</a> </li>
                      <li class="GuideLink"><a href="https://www.youtube.com/watch?v=SR_zotDj4rY&list=PLhx6nABtx9XNfs9x66l_H5SncBzg1Fa-f" target="_blank">Youtube PlayList by Ready Check Pull</a></li>
                      <li class="GuideImg"><img src="../img/Flayer_Undermine.png"  height="150"></li>
@@ -42,7 +42,7 @@
 
                 <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
                 <div class="ItemGuia"> <ul>
-                     <li class="GuideTitle"><i>The War Within Season 2 - Overview </i><br></li>
+                     <li class="GuideTitle"><i>The War Within Season 2 - Overview </i></li>
                      <li class="GuideLink"><a href="https://www.wowhead.com/guide/the-war-within/season-2-overview" target="_blank">Wowhead Full Guide</a> </li>
                      <li class="GuideLink"><a href="" target="_blank"></a></li>
                      <li class="GuideImg"><img src="../img/Flyer-TheWarWithin.png"  height="150"></li>
@@ -51,7 +51,7 @@
 
                 <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
                 <div class="ItemGuia"> <ul>
-                     <li class="GuideTitle"><i>The War Within Season 2 - Brewmaster Guide </i><br></li>
+                     <li class="GuideTitle"><i>The War Within Season 2 - Brewmaster Guide </i></li>
                      <li class="GuideLink"><a href="https://www.wowhead.com/guide/classes/monk/brewmaster/overview-pve-tank" target="_blank">Wowhead Full Guide</a> </li>
                      <li class="GuideLink"><a href="" target="_blank"></a></li>
                      <li class="GuideImg"><img src="../img/Flyer-Brewmaster.png"  height="150"></li>
@@ -60,7 +60,7 @@
 
                  <div class="ProfilePic"><img src="../img/ProfilePic-Celduin.png" alt="Profile Pic" width="146" height="146">  </div>
                 <div class="ItemGuia"> <ul>
-                     <li class="GuideTitle"><i>The War Within Season 2 - Arms Warrior Guide </i><br></li>
+                     <li class="GuideTitle"><i>The War Within Season 2 - Arms Warrior Guide </i></li>
                      <li class="GuideLink"><a href="https://www.wowhead.com/guide/classes/warrior/arms/overview-pve-dps" target="_blank">Wowhead Full Guide</a> </li>
                      <li class="GuideLink"><a href="" target="_blank"></a></li>
                      <li class="GuideImg"><img src="../img/Flyer-ArmsWarrior.png"  height="150"></li>
@@ -69,7 +69,7 @@
 
                   <div class="ProfilePic"><img src="../img/ProfilePic-Celduin.png" alt="Profile Pic" width="146" height="146">  </div>
                 <div class="ItemGuia"> <ul>
-                     <li class="GuideTitle"><i>The War Within Season 2 - PvP Guide </i><br></li>
+                     <li class="GuideTitle"><i>The War Within Season 2 - PvP Guide </i></li>
                      <li class="GuideLink"><a href="https://www.icy-veins.com/wow/the-war-within-pvp-season-2-guide" target="_blank">IcyVeins Full Guide</a> </li>
                      <li class="GuideLink"><a href="" target="_blank"></a></li>
                      <li class="GuideImg"><img src="../img/Flyer-PvPGuide.png"  height="150"></li>
@@ -78,12 +78,22 @@
 
         </section>
     </main>
-    <footer class="footerlong">
-    <p>
-        Creado por Burgos Claudio
-        <br>
-        Todas las marcas aquí mencionadas son propiedad de sus respectivos dueños.
-    </p>
+    <footer>
+        <section class="LinkSection">
+            <p>Encuentranos en:</p>
+            <ul>
+                <li class="LinkList"><i class="bi bi-discord"></i><a href="https://discord.gg/CtFYu45ZWF" target="_blank"> &nbsp;Discord&nbsp; </a><i class="bi bi-discord"></i></li>
+                <li class="LinkList"><i class="bi bi-facebook"></i><a href="https://www.facebook.com/groups/220619288298128" target="_blank"> &nbsp;Facebook&nbsp; </a><i class="bi bi-facebook"></i></li>
+                <li class="LinkList"><i class="bi bi-youtube"></i><a href="https://www.youtube.com/@ElEmbateObsidiana" target="_blank"> &nbsp;Youtube&nbsp; </a><i class="bi bi-youtube"></i></li>
+                <li class="LinkList"><i class="bi bi-shield"></i><a href="https://www.warcraftlogs.com/guild/us/quelthalas/el%20embate%20obsidiana" target="_blank"> &nbsp;WarcraftLogs&nbsp; </a><i class="bi bi-shield"></i></li>
+             </ul>
+        </section>
+        <section class="DisclaimerSection">
+       <p> Creado por Burgos Claudio
+           <br>
+           Todas las marcas aquí mencionadas son propiedad de sus respectivos dueños.
+       </p>
+       </section>
     </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script> 
 </body>
