--- a/pages/Media.html
+++ b/pages/Media.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 
     <link rel="icon" type="image/png" sizes="16x16"  href="../img/favicons/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#ffffff">
@@ -17,7 +17,7 @@
     </div>
 </head>
 
-<body background="../img/Background - Media 3.jpg">
+<body>
     <header>
         <h1>El Embate Obsidiana</h1>
             <ul class="header">
@@ -29,8 +29,9 @@
         </ul>
     </header> 
 
-    <main>
-        <section class="MediaContainer">
+    <main class="Media">
+        <section class="MediaBackground">
+          <div class="MediaContainer">
             <img src="../img/Media/20250516 - AotC Gallywix Parade (9).jpg" alt="AotC Gallywix Parade (9)" width="50%">
             <img src="../img/Media/20250516 - AotC Gallywix Parade (3).jpg" alt=""  width="50%">
             <img src="../img/Media/20250516 - AotC Gallywix Parade (1).jpg" alt="" width="50%">
@@ -43,15 +44,26 @@
             <img src="../img/Media/Landscape (4).jpg" alt="" width="50%">
             <img src="../img/Media/Karyon.jpg" alt="" width="50%">
             <img src="../img/Media/Embate Flag (1).jpg" alt="" width="50%">
+          </div>
          
         </section>
     </main>
     <footer>
-    <p>
-        Creado por Burgos Claudio
-        <br>
-        Todas las marcas aquí mencionadas son propiedad de sus respectivos dueños.
-    </p>
+        <section class="LinkSection">
+            <p>Encuentranos en:</p>
+            <ul>
+                <li class="LinkList"><i class="bi bi-discord"></i><a href="https://discord.gg/CtFYu45ZWF" target="_blank"> &nbsp;Discord&nbsp; </a><i class="bi bi-discord"></i></li>
+                <li class="LinkList"><i class="bi bi-facebook"></i><a href="https://www.facebook.com/groups/220619288298128" target="_blank"> &nbsp;Facebook&nbsp; </a><i class="bi bi-facebook"></i></li>
+                <li class="LinkList"><i class="bi bi-youtube"></i><a href="https://www.youtube.com/@ElEmbateObsidiana" target="_blank"> &nbsp;Youtube&nbsp; </a><i class="bi bi-youtube"></i></li>
+                <li class="LinkList"><i class="bi bi-shield"></i><a href="https://www.warcraftlogs.com/guild/us/quelthalas/el%20embate%20obsidiana" target="_blank"> &nbsp;WarcraftLogs&nbsp; </a><i class="bi bi-shield"></i></li>
+             </ul>
+        </section>
+        <section class="DisclaimerSection">
+       <p> Creado por Burgos Claudio
+           <br>
+           Todas las marcas aquí mencionadas son propiedad de sus respectivos dueños.
+       </p>
+       </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script> 
 </body>
