Terminados todos los fondos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#ffffff">
     
     <div class="TituloPrincipal">
-    <img class="Logo" src="./img/Logo Embate sin fondo.png" width="75" height="90">
+    <img class="Logo" src="./img/Logo-Embate_sin_fondo.png" width="75" height="90">
     <title>El Embate Obsidiana</title>
     </div>
 </head>
