--- a/pages/Relatos.html
+++ b/pages/Relatos.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <div class="TituloPrincipal">
-    <img class="Logo" src="../img/Logo Embate sin fondo.png" width="75" height="90">
+    <img class="Logo" src="../img/Logo-Embate_sin_fondo.png" width="75" height="90">
     <title>El Embate Obsidiana</title>
     </div>
 </head>
@@ -29,7 +29,7 @@
         </ul>
     </header>
 
-    <main>
+    <main class="Relatos">
         <section class="RelatosSection">
             <div class="RelatoTitulo"><p>Reporte de Rhogal 00 - Introduccion</p></div>
             <div class="Relato"> <iframe class="Relato00"
