--- a/pages/Guias.html
+++ b/pages/Guias.html
@@ -31,48 +31,48 @@
 
     <main class="Guias">
         <section class="ListaGuias">
-                <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
+                <div class="ProfilePic_Karyon"></div>
                 <div class="ItemGuia"> <ul>
                      <li class="GuideTitle"><i>Liberation of Undermine - Raid Overview </i></li>
                      <li class="GuideLink"><a href="https://www.wowhead.com/guide/raids/liberation-of-undermine/overview" target="_blank">Wowhead Full Guide</a> </li>
                      <li class="GuideLink"><a href="https://www.youtube.com/watch?v=SR_zotDj4rY&list=PLhx6nABtx9XNfs9x66l_H5SncBzg1Fa-f" target="_blank">Youtube PlayList by Ready Check Pull</a></li>
-                     <li class="GuideImg"><img src="../img/Flayer_Undermine.png"  height="150"></li>
+                     <li class="GuideImg-UndermineRaid"></li>
                 </div>
                 <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
 
-                <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
+                <div class="ProfilePic_Karyon"></div>
                 <div class="ItemGuia"> <ul>
                      <li class="GuideTitle"><i>The War Within Season 2 - Overview </i></li>
                      <li class="GuideLink"><a href="https://www.wowhead.com/guide/the-war-within/season-2-overview" target="_blank">Wowhead Full Guide</a> </li>
                      <li class="GuideLink"><a href="" target="_blank"></a></li>
-                     <li class="GuideImg"><img src="../img/Flyer-TheWarWithin.png"  height="150"></li>
+                     <li class="GuideImg-TWWS02Overview"></li>
                 </div>
                 <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
 
-                <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
+                <div class="ProfilePic_Karyon"></div>
                 <div class="ItemGuia"> <ul>
                      <li class="GuideTitle"><i>The War Within Season 2 - Brewmaster Guide </i></li>
                      <li class="GuideLink"><a href="https://www.wowhead.com/guide/classes/monk/brewmaster/overview-pve-tank" target="_blank">Wowhead Full Guide</a> </li>
                      <li class="GuideLink"><a href="" target="_blank"></a></li>
-                     <li class="GuideImg"><img src="../img/Flyer-Brewmaster.png"  height="150"></li>
+                     <li class="GuideImg-TWWS02BrewmasterGuide"></li>
                 </div>
                 <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
 
-                 <div class="ProfilePic"><img src="../img/ProfilePic-Celduin.png" alt="Profile Pic" width="146" height="146">  </div>
+                 <div class="ProfilePic_Celduin"></div>
                 <div class="ItemGuia"> <ul>
                      <li class="GuideTitle"><i>The War Within Season 2 - Arms Warrior Guide </i></li>
                      <li class="GuideLink"><a href="https://www.wowhead.com/guide/classes/warrior/arms/overview-pve-dps" target="_blank">Wowhead Full Guide</a> </li>
                      <li class="GuideLink"><a href="" target="_blank"></a></li>
-                     <li class="GuideImg"><img src="../img/Flyer-ArmsWarrior.png"  height="150"></li>
+                     <li class="GuideImg-TWWS02ArmsGuide"></li>
                 </div>
                 <div class="GuiaAutor">by Celduin <br> 22/06/2025 </div>
 
-                  <div class="ProfilePic"><img src="../img/ProfilePic-Celduin.png" alt="Profile Pic" width="146" height="146">  </div>
+                  <div class="ProfilePic_Celduin"></div>
                 <div class="ItemGuia"> <ul>
                      <li class="GuideTitle"><i>The War Within Season 2 - PvP Guide </i></li>
                      <li class="GuideLink"><a href="https://www.icy-veins.com/wow/the-war-within-pvp-season-2-guide" target="_blank">IcyVeins Full Guide</a> </li>
                      <li class="GuideLink"><a href="" target="_blank"></a></li>
-                     <li class="GuideImg"><img src="../img/Flyer-PvPGuide.png"  height="150"></li>
+                     <li class="GuideImg-TWWS02PvPGuide"></li>
                 </div>
                 <div class="GuiaAutor">by Celduin <br> 22/06/2025 </div>
 
