--- a/pages/Relatos.html
+++ b/pages/Relatos.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="RelatosHeader">
         <h1>El Embate Obsidiana</h1>
             <ul class="header">
             <li class="BotonesHeader"><i class="bi bi-person"></i><a href="../index.html">&nbsp;Quienes Somos</a></li>
