Metadescription y Keywords agregados. Entrega Final.

--- a/pages/Media.html
+++ b/pages/Media.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Captura y comparte tus experiencias con nuestra hermandad.">
+    <meta name="keywords" content="World of Warcraft, fotos, videos, recuerdos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../styles/style.css">
@@ -20,7 +22,7 @@
 <body>
     <header>
         <h1>El Embate Obsidiana</h1>
-            <ul class="header">
+            <ul class="Botonera">
             <li class="BotonesHeader"><i class="bi bi-person"></i><a href="../index.html">&nbsp;Quienes Somos</a></li>
             <li class="BotonesHeader"><i class="bi bi-image-fill"></i><a href="./Media.html">&nbsp;Media</a></li>
             <li class="BotonesHeader"><i class="bi bi-compass"></i><a href="./Guias.html">&nbsp;Guias</a></li>
@@ -32,18 +34,18 @@
     <main class="Media">
         <section class="MediaBackground">
           <div class="MediaContainer">
-            <img src="../img/Media/20250516 - AotC Gallywix Parade (9).jpg" alt="AotC Gallywix Parade (9)" width="50%">
-            <img src="../img/Media/20250516 - AotC Gallywix Parade (3).jpg" alt=""  width="50%">
-            <img src="../img/Media/20250516 - AotC Gallywix Parade (1).jpg" alt="" width="50%">
-            <img src="../img/Media/20250514 - Gallywix Kill (1).jpg" alt="" width="50%">
-            <img src="../img/Media/20250319 - Undermine.jpg" alt="" width="50%">
-            <img src="../img/Media/20241006 - Karyon Pic.jpg" alt="" width="50%">
-            <img src="../img/Media/20240724 - First Warband!.jpeg" alt="" width="50%">
-            <img src="../img/Media/20240208 - AotC Fyrakk (1).jpg" alt="" width="50%">
-            <img src="../img/Media/20230912 - Azeroth from Genedar (2).jpg" alt="" width="50%">
-            <img src="../img/Media/Landscape (4).jpg" alt="" width="50%">
-            <img src="../img/Media/Karyon.jpg" alt="" width="50%">
-            <img src="../img/Media/Embate Flag (1).jpg" alt="" width="50%">
+             <img class="MediaImg" src="../img/Media/20250516 - AotC Gallywix Parade (9).jpg" alt="AotC Gallywix Party - Parade" width="50%">
+             <img class="MediaImg" src="../img/Media/20250516 - AotC Gallywix Parade (3).jpg" alt="AotC Gallywix Party - Stairs"  width="50%">
+             <img class="MediaImg" src="../img/Media/20250516 - AotC Gallywix Parade (1).jpg" alt="AotC Gallywix Party - Fountain" width="50%">
+             <img class="MediaImg" src="../img/Media/20250514 - Gallywix Kill (1).jpg" alt="Gallywix Kill Group Pic" width="50%">
+             <img class="MediaImg" src="../img/Media/20250319 - Undermine.jpg" alt="Resting Gnome" width="50%">
+             <img class="MediaImg" src="../img/Media/20241006 - Karyon Pic.jpg" alt="Meditating Draenei Monk" width="50%">
+             <img class="MediaImg" src="../img/Media/20240724 - First Warband!.jpeg" alt="First Account Warband" width="50%">
+             <img class="MediaImg" src="../img/Media/20240208 - AotC Fyrakk (1).jpg" alt="Fyrakk AotC Mount Showoff" width="50%">
+             <img class="MediaImg" src="../img/Media/20230912 - Azeroth from Genedar (2).jpg" alt="Azeroth View from Genedar" width="50%">
+             <img class="MediaImg" src="../img/Media/Landscape (4).jpg" alt="IronForge Bank" width="50%">
+             <img class="MediaImg" src="../img/Media/Kheon_FightPose_FelForest.jpg" alt="Human Paladin Tanaan Jungle" width="50%">
+             <img class="MediaImg" src="../img/Media/Embate Flag (1).jpg" alt="Embate Obsidiana Guild Banner" width="50%">
           </div>
          
         </section>
