--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Encuentra a tu proximo grupo de amigos gamers! Somos una comunidad nacida en World of Warcraft, con foco en raideo, relatos y amigos.">
+    <meta name="keywords" content="World of Warcraft, gaming, hermandad, raid, roleplay">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./styles/style.css"> 
@@ -20,7 +22,7 @@
 <body>
     <header>
         <h1>El Embate Obsidiana</h1>
-        <ul class="header">
+        <ul class="Botonera"> 
             <li class="BotonesHeader"><i class="bi bi-person"></i><a href="./index.html">&nbsp;Quienes Somos</a></li>
             <li class="BotonesHeader"><i class="bi bi-image-fill"></i><a href="./pages/Media.html">&nbsp;Media</a></li>
             <li class="BotonesHeader"><i class="bi bi-compass"></i><a href="./pages/Guias.html">&nbsp;Guias</a></li>
@@ -68,11 +70,11 @@
              </ul>
         </section>
         <section class="DisclaimerSection">
-       <p> Creado por Burgos Claudio
+        <p> Creado por Burgos Claudio
            <br>
            Todas las marcas aquí mencionadas son propiedad de sus respectivos dueños.
-       </p>
-       </section>
+        </p>
+        </section>
     </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
