--- a/pages/Guias.html
+++ b/pages/Guias.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Encuentra guias para contenido de mundo, PvE y PvP en World of Warcraft.">
+    <meta name="keywords" content="World of Warcraft, guias, PvE, PvE, world content">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../styles/style.css">
@@ -20,7 +23,7 @@
 <body>
     <header>
             <h1>El Embate Obsidiana</h1>
-            <ul class="header">
+            <ul class="Botonera">
             <li class="BotonesHeader"><i class="bi bi-person"></i><a href="../index.html">&nbsp;Quienes Somos</a></li>
             <li class="BotonesHeader"><i class="bi bi-image-fill"></i><a href="./Media.html">&nbsp;Media</a></li>
             <li class="BotonesHeader"><i class="bi bi-compass"></i><a href="./Guias.html">&nbsp;Guias</a></li>
