--- a/pages/Media.html
+++ b/pages/Media.html
@@ -7,20 +7,23 @@
     <meta name="keywords" content="World of Warcraft, fotos, videos, recuerdos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <link rel="icon" type="image/png" sizes="16x16"  href="../img/favicons/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     
-    <div class="TituloPrincipal">
-    <img class="Logo" src="../img/Logo-Embate_sin_fondo.png" width="75" height="90">
+    <link rel="icon" type="image/png" sizes="16x16"  href="./img/favicons/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
     <title>El Embate Obsidiana</title>
-    </div>
 </head>
 
 <body>
     <header>
+    <div class="TituloPrincipal">
+    <img class="Logo" src="../img/Logo-Embate_sin_fondo.png" width="75" height="90">
+    </div>
         <h1>El Embate Obsidiana</h1>
             <ul class="Botonera">
             <li class="BotonesHeader"><i class="bi bi-person"></i><a href="../index.html">&nbsp;Quienes Somos</a></li>
@@ -34,18 +37,18 @@
     <main class="Media">
         <section class="MediaBackground">
           <div class="MediaContainer">
-             <img class="MediaImg" src="../img/Media/20250516 - AotC Gallywix Parade (9).jpg" alt="AotC Gallywix Party - Parade" width="50%">
-             <img class="MediaImg" src="../img/Media/20250516 - AotC Gallywix Parade (3).jpg" alt="AotC Gallywix Party - Stairs"  width="50%">
-             <img class="MediaImg" src="../img/Media/20250516 - AotC Gallywix Parade (1).jpg" alt="AotC Gallywix Party - Fountain" width="50%">
-             <img class="MediaImg" src="../img/Media/20250514 - Gallywix Kill (1).jpg" alt="Gallywix Kill Group Pic" width="50%">
-             <img class="MediaImg" src="../img/Media/20250319 - Undermine.jpg" alt="Resting Gnome" width="50%">
-             <img class="MediaImg" src="../img/Media/20241006 - Karyon Pic.jpg" alt="Meditating Draenei Monk" width="50%">
-             <img class="MediaImg" src="../img/Media/20240724 - First Warband!.jpeg" alt="First Account Warband" width="50%">
-             <img class="MediaImg" src="../img/Media/20240208 - AotC Fyrakk (1).jpg" alt="Fyrakk AotC Mount Showoff" width="50%">
-             <img class="MediaImg" src="../img/Media/20230912 - Azeroth from Genedar (2).jpg" alt="Azeroth View from Genedar" width="50%">
-             <img class="MediaImg" src="../img/Media/Landscape (4).jpg" alt="IronForge Bank" width="50%">
-             <img class="MediaImg" src="../img/Media/Kheon_FightPose_FelForest.jpg" alt="Human Paladin Tanaan Jungle" width="50%">
-             <img class="MediaImg" src="../img/Media/Embate Flag (1).jpg" alt="Embate Obsidiana Guild Banner" width="50%">
+             <img class="MediaImg" src="../img/Media/20250516 - AotC Gallywix Parade (9).jpg" alt="Un desfile de héroes de Azeroth se desplaza por la ciudad de Dornogal, mostrando sus nuevos robots monturas." width="50%">
+             <img class="MediaImg" src="../img/Media/20250516 - AotC Gallywix Parade (3).jpg" alt="Un grupo de héroes posa con sus nuevos robots monturas en la escalera que lleva al edificio principal de Dornogal."  width="50%">
+             <img class="MediaImg" src="../img/Media/20250516 - AotC Gallywix Parade (1).jpg" alt="Un grupo de héroes posa con sus nuevos robots monturas alrededor de una fuente en Dornogal." width="50%">
+             <img class="MediaImg" src="../img/Media/20250514 - Gallywix Kill (1).jpg" alt="Los heroes del Embate Obsidiana posan para la foto con Gallywix derrotado de fondo." width="50%">
+             <img class="MediaImg" src="../img/Media/20250319 - Undermine.jpg" alt="El gnomo brujo Faddin descansa en una reposera, junto a su mascota manáfago en la reposera de al lado." width="50%">
+             <img class="MediaImg" src="../img/Media/20241006 - Karyon Pic.jpg" alt="El draenei monje Karyon medita sobre una de las torres de Dornogal, con el estandarte del Embate Obsidiana de fondo." width="50%">
+             <img class="MediaImg" src="../img/Media/20240724 - First Warband!.jpeg" alt="Primera foto del Warband del lider de la hermandad. En ella se ven los héroes Reltor, Karyon, Faddin y Kheon alrededor de una fogata en medio de un bosque." width="50%">
+             <img class="MediaImg" src="../img/Media/20240208 - AotC Fyrakk (1).jpg" alt="Un grupo de héroes posa con la montura de Fyrakk en un puente de la ciudad de Valdrakken." width="50%">
+             <img class="MediaImg" src="../img/Media/20230912 - Azeroth from Genedar (2).jpg" alt="Un héroe observa el planeta Azeroth desde la cornisa de la nave Genedar, desde el espacio." width="50%">
+             <img class="MediaImg" src="../img/Media/Landscape (4).jpg" alt="Vista del banco de Ironforge y su enorme entrada debajo de la montaña." width="50%">
+             <img class="MediaImg" src="../img/Media/Kheon_FightPose_FelForest.jpg" alt="El humano paladin Kheon se para sobre suelo consagrado, con un paisaje corrompido por energias viles de fondo." width="50%">
+             <img class="MediaImg" src="../img/Media/Embate Flag (1).jpg" alt="El estandarte del Embate Obsidiana se eleva en el centro de la foto, con el hotel Gallagio de Undermine al fondo." width="50%">
           </div>
          
         </section>
@@ -61,11 +64,9 @@
              </ul>
         </section>
         <section class="DisclaimerSection">
-       <p> Creado por Burgos Claudio
-           <br>
-           Todas las marcas aquí mencionadas son propiedad de sus respectivos dueños.
-       </p>
-       </section>
+        <p> Creado por Burgos Claudio </p>
+        <p>Todas las marcas aquí mencionadas son propiedad de sus respectivos dueños.</p>
+        </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script> 
 </body>
