--- a/pages/Relatos.html
+++ b/pages/Relatos.html
@@ -7,20 +7,23 @@
     <meta name="keywords" content="World of Warcraft, relatos, fanfics, fannon, roleplay">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <link rel="icon" type="image/png" sizes="16x16"  href="../img/favicons/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
 
-    <div class="TituloPrincipal">
-    <img class="Logo" src="../img/Logo-Embate_sin_fondo.png" width="75" height="90">
+    <link rel="icon" type="image/png" sizes="16x16"  href="./img/favicons/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
     <title>El Embate Obsidiana</title>
-    </div>
 </head>
 
 <body>
     <header class="RelatosHeader">
+    <div class="TituloPrincipal">
+    <img class="Logo" src="../img/Logo-Embate_sin_fondo.png" width="75" height="90">
+    </div>
         <h1>El Embate Obsidiana</h1>
             <ul class="Botonera">
             <li class="BotonesHeader"><i class="bi bi-person"></i><a href="../index.html">&nbsp;Quienes Somos</a></li>
@@ -37,7 +40,7 @@
             <div class="RelatoTitulo"><p>Reporte de Rhogal 00 - Introduccion</p></div>
             <div class="Relato"> <iframe class="Relato00"
                  title="Relato00" width="80%" height="500px"
-                 src="../pdf/Reporte de Rhogal 00 - Introduccion.pdf"></iframe></div>
+                 src="../content/Reporte de Rhogal 00 - Introduccion.pdf"></iframe></div>
             <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
             <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
             <div class="Relleno"></div>
@@ -45,7 +48,7 @@
             <div class="RelatoTitulo"><p>Reporte de Rhogal 00b - Aidan Rhogal</p></div>
             <div class="Relato"> <iframe class="Relato00b"
                  title="Relato00b" width="80%" height="500px"
-                 src="../pdf/Reporte de Rhogal 00b - Aidan Rhogal.pdf"></iframe></div>
+                 src="../content/Reporte de Rhogal 00b - Aidan Rhogal.pdf"></iframe></div>
             <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
             <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
             <div class="Relleno"></div>
@@ -53,7 +56,7 @@
             <div class="RelatoTitulo"><p>Reporte de Rhogal 01 - Faddin Flamewit</p></div>
             <div class="Relato"> <iframe class="Relato00b"
                  title="Relato00b" width="80%" height="500px"
-                 src="../pdf/Reporte de Rhogal 01 - Faddin Flamewit.pdf"></iframe></div>
+                 src="../content/Reporte de Rhogal 01 - Faddin Flamewit.pdf"></iframe></div>
             <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
             <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
             <div class="Relleno"></div>
@@ -71,11 +74,9 @@
              </ul>
         </section>
         <section class="DisclaimerSection">
-       <p> Creado por Burgos Claudio
-           <br>
-           Todas las marcas aquí mencionadas son propiedad de sus respectivos dueños.
-       </p>
-       </section>
+        <p> Creado por Burgos Claudio </p>
+        <p>Todas las marcas aquí mencionadas son propiedad de sus respectivos dueños.</p>
+        </section>
     </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script> 
 </body>
