--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
 
 <body>
     <header>
-    <div class="TituloPrincipal">
-    <img class="Logo" src="./img/Logo-Embate_sin_fondo.png" width="75" height="90">
-    </div>
-        <h1>El Embate Obsidiana</h1>
-        <ul class="Botonera"> 
+          <img class="Logo" src="./img/Logo-Embate_sin_fondo.png" width="75" height="90">
+          <h1 class="MainTitle">El Embate Obsidiana</h1>
+          <ul class="Botonera"> 
             <li class="BotonesHeader"><i class="bi bi-person"></i><a href="./index.html">&nbsp;Quienes Somos</a></li>
             <li class="BotonesHeader"><i class="bi bi-image-fill"></i><a href="./pages/Media.html">&nbsp;Media</a></li>
             <li class="BotonesHeader"><i class="bi bi-compass"></i><a href="./pages/Guias.html">&nbsp;Guias</a></li>
