--- a/pages/Guias.html
+++ b/pages/Guias.html
@@ -42,7 +42,7 @@
                      <li class="GuideLink"><a href="https://www.youtube.com/watch?v=SR_zotDj4rY&list=PLhx6nABtx9XNfs9x66l_H5SncBzg1Fa-f" target="_blank">Youtube PlayList by Ready Check Pull</a></li>
                      <li class="GuideImg-UndermineRaid"></li>
                 </div>
-                <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
+                <div class="GuiaAutor"><p>by Karyon </p><p> 22/06/2025 </p></div>
 
                 <div class="ProfilePic_Karyon"></div>
                 <div class="ItemGuia"> <ul>
@@ -51,7 +51,7 @@
                      <li class="GuideLink"><a href="" target="_blank"></a></li>
                      <li class="GuideImg-TWWS02Overview"></li>
                 </div>
-                <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
+                <div class="GuiaAutor">b<p>by Karyon </p><p> 22/06/2025 </p></div>
 
                 <div class="ProfilePic_Karyon"></div>
                 <div class="ItemGuia"> <ul>
@@ -60,7 +60,7 @@
                      <li class="GuideLink"><a href="" target="_blank"></a></li>
                      <li class="GuideImg-TWWS02BrewmasterGuide"></li>
                 </div>
-                <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
+                <div class="GuiaAutor"><p>by Karyon </p><p> 22/06/2025 </p></div>
 
                  <div class="ProfilePic_Celduin"></div>
                 <div class="ItemGuia"> <ul>
@@ -69,7 +69,7 @@
                      <li class="GuideLink"><a href="" target="_blank"></a></li>
                      <li class="GuideImg-TWWS02ArmsGuide"></li>
                 </div>
-                <div class="GuiaAutor">by Celduin <br> 22/06/2025 </div>
+                <div class="GuiaAutor"><p>by Celduin </p><p> 22/06/2025 </p></div>
 
                   <div class="ProfilePic_Celduin"></div>
                 <div class="ItemGuia"> <ul>
@@ -78,7 +78,7 @@
                      <li class="GuideLink"><a href="" target="_blank"></a></li>
                      <li class="GuideImg-TWWS02PvPGuide"></li>
                 </div>
-                <div class="GuiaAutor">by Celduin <br> 22/06/2025 </div>
+                <div class="GuiaAutor"><p>by Celduin </p><p> 22/06/2025 </p></div>
 
         </section>
     </main>
