--- a/pages/Relatos.html
+++ b/pages/Relatos.html
@@ -40,7 +40,7 @@
                  title="Relato00" width="80%" height="500px"
                  src="../content/Reporte de Rhogal 00 - Introduccion.pdf"></iframe></div>
             <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
-            <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
+            <div class="GuiaAutor"><p>by Karyon </p><p> 22/06/2025 </p></div>
             <div class="Relleno"></div>
         
             <div class="RelatoTitulo"><p>Reporte de Rhogal 00b - Aidan Rhogal</p></div>
@@ -48,7 +48,7 @@
                  title="Relato00b" width="80%" height="500px"
                  src="../content/Reporte de Rhogal 00b - Aidan Rhogal.pdf"></iframe></div>
             <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
-            <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
+            <div class="GuiaAutor"><p>by Karyon </p><p> 22/06/2025 </p></div>
             <div class="Relleno"></div>
 
             <div class="RelatoTitulo"><p>Reporte de Rhogal 01 - Faddin Flamewit</p></div>
@@ -56,7 +56,7 @@
                  title="Relato00b" width="80%" height="500px"
                  src="../content/Reporte de Rhogal 01 - Faddin Flamewit.pdf"></iframe></div>
             <div class="ProfilePic"><img src="../img/ProfilePic-Karyon.png" alt="Profile Pic" width="146" height="146">  </div>
-            <div class="GuiaAutor">by Karyon <br> 22/06/2025 </div>
+            <div class="GuiaAutor"><p>by Karyon </p><p> 22/06/2025 </p></div>
             <div class="Relleno"></div>
          
         </section>
